# MagnetoChess

./: .env.example  .gitignore  Cargo.toml  README.md
src/: engine.rs  main.rs
