[package]
name = "magneto_chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chess = "3.2.0"
dialoguer = "0.10.2"
rand = "0.8.5"
vampirc-uci = {version = "0.11", features = ["chess"]}